first attempt at jdk8 support