@@ -13,7 +13,9 @@ import static org.junit.jupiter.api.DynamicTest.dynamicTest;
 import edu.rice.autograder.annotations.Grade;
 import edu.rice.autograder.annotations.GradeProject;
 import edu.rice.autograder.annotations.GradeTopic;
+import java.util.Arrays;
 import java.util.List;
+import java.util.function.Predicate;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -27,9 +29,10 @@ public class TestPatterns {
   @Grade(project = "RE", topic = "Identifiers", points = 0.5, maxPoints = 1.5)
   @TestFactory
   List<DynamicTest> testClassIdentifiers() {
-    var goodClassNames = List.of("Alice", "Bob", "Charlie", "CamelCaseClasses", "Thing1", "Thing2");
-    var badClassNames =
-        List.of(
+    List<String> goodClassNames =
+        Arrays.asList("Alice", "Bob", "Charlie", "CamelCaseClasses", "Thing1", "Thing2");
+    List<String> badClassNames =
+        Arrays.asList(
             "alice",
             "bob",
             "charlie",
@@ -48,9 +51,10 @@ public class TestPatterns {
   @Grade(project = "RE", topic = "Identifiers", points = 0.5, maxPoints = 1.5)
   @TestFactory
   List<DynamicTest> testMethodIdentifiers() {
-    var goodMethodNames = List.of("alice", "bob", "charlie", "camelCaseNames", "thing1", "thing2");
-    var badMethodNames =
-        List.of(
+    List<String> goodMethodNames =
+        Arrays.asList("alice", "bob", "charlie", "camelCaseNames", "thing1", "thing2");
+    List<String> badMethodNames =
+        Arrays.asList(
             "Alice",
             "Bob",
             "Charlie",
@@ -69,8 +73,8 @@ public class TestPatterns {
   @Grade(project = "RE", topic = "Numbers", points = 1, maxPoints = 1)
   @TestFactory
   List<DynamicTest> testIntegerUnderscores() {
-    var goodNumbers = List.of("234_567", "2_3_4_5_6_7", "-234_567_890L");
-    var badNumbers = List.of("_234_567", "2__3_4_5_6_7", "8_");
+    List<String> goodNumbers = Arrays.asList("234_567", "2_3_4_5_6_7", "-234_567_890L");
+    List<String> badNumbers = Arrays.asList("_234_567", "2__3_4_5_6_7", "8_");
 
     return goodAndBad(goodNumbers, badNumbers, Patterns.integerPattern);
   }
@@ -78,20 +82,23 @@ public class TestPatterns {
   @Grade(project = "RE", topic = "Numbers", points = 1, maxPoints = 5)
   @TestFactory
   List<DynamicTest> testIntegers() {
-    var goodNumbers = List.of("-29", "-3", "-0", "0", "1", "22", "9285", "0L", "1L");
-    var badNumbers =
-        List.of("-029", "-03", "-00", "00", "0-", "0-0", "1f", "0x22", "9285.3", "10e5", "NaN");
+    List<String> goodNumbers = Arrays.asList("-29", "-3", "-0", "0", "1", "22", "9285", "0L", "1L");
+    List<String> badNumbers =
+        Arrays.asList(
+            "-029", "-03", "-00", "00", "0-", "0-0", "1f", "0x22", "9285.3", "10e5", "NaN");
 
     return goodAndBad(goodNumbers, badNumbers, Patterns.integerPattern);
   }
 
   private static List<DynamicTest> goodAndBad(
       List<String> goodExamples, List<String> badExamples, String regex) {
-    var p = Pattern.compile(regex).asMatchPredicate();
 
-    var positiveTests =
+    Predicate<String> p = Pattern.compile("^" + regex + "$").asPredicate();
+    // Pattern.compile(regex).asMatchPredicate(); // only works in newer JDKs
+
+    Stream<DynamicTest> positiveTests =
         goodExamples.stream().map(s -> dynamicTest("Good: " + s, () -> assertTrue(p.test(s))));
-    var negativeTests =
+    Stream<DynamicTest> negativeTests =
         badExamples.stream().map(s -> dynamicTest("Bad: " + s, () -> assertFalse(p.test(s))));
 
     return Stream.concat(positiveTests, negativeTests).collect(Collectors.toList());
